--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Snapshots</h2>
+                    <h2 class="section-heading">Highlights</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -127,7 +127,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Love with code</h3>
+                        <h3>Code with Love</h3>
                         <p class="text-muted">Ever updating, ever learning, stand by code quality and standards</p>
                     </div>
                 </div>
@@ -249,9 +249,9 @@
                     <p><a href="mailto:ashokraj.info@gmail.com">ashokraj.info@gmail.com</a></p>
                 </div>
                 <div class="col-lg-2  text-center">
+                        <i class="fa fa-linkedin-square fa-3x sr-contact" aria-hidden="true"></i>
                     <a href="https://www.linkedin.com/in/ashokrajl">
-                        <img src="img/portfolio/linkedin.png" alt="" class="linkedin-img"/>
-                        <div>LinkedIn</div>
+                        LinkedIn
                     </a>
                 </div>
             </div>
