--- a/index.html
+++ b/index.html
@@ -85,8 +85,22 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Language is no barrier for a true developer</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <p class="text-faded">Technologies rise and fall, my key is a strong base (Engineering in Computer Science), constantly updating and hands on experience to stay sharp</p>
+                    <span class="badge badge-dark">ReactJS, Redux, Saga</span>
+                    <span class="badge badge-dark">JavaScript</span>
+                    <span class="badge badge-dark">Java/J2EE</span>
+                    <span class="badge badge-dark">SQL</span>
+                    <span class="badge badge-dark">CSS</span>
+                    <span class="badge badge-dark">HTML5</span>
+                    <span class="badge badge-dark">ElasticSearch (ELK)</span>
+                    <span class="badge badge-dark">Material UI & Storybook</span>
+                    <span class="badge badge-dark">NodeJS, Express</span>
+                    <span class="badge badge-dark">jQuery</span>
+                    <span class="badge badge-dark">SequelizeJS (ORM)</span>
+                    <span class="badge badge-dark">Bootstrap</span>
+                    <span class="badge badge-dark">React Native</span>
+                    <span class="badge badge-dark">Eslint, Jest, Cypress</span>
+                    <span class="badge badge-dark">Ionic</span>
                 </div>
             </div>
         </div>
@@ -185,14 +199,14 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                        <img src="img/gallery/google_mobile.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Google for Mobile
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    2015, Bengaluru
                                 </div>
                             </div>
                         </div>
@@ -251,7 +265,7 @@
                 <div class="col-lg-2  text-center">
                         <i class="fa fa-linkedin-square fa-3x sr-contact" aria-hidden="true"></i>
                     <a href="https://www.linkedin.com/in/ashokrajl">
-                        LinkedIn
+                       <div>LinkedIn</div> 
                     </a>
                 </div>
             </div>
