Adding to tech stack

--- a/index.html
+++ b/index.html
@@ -85,22 +85,29 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Language is no barrier for a true developer</h2>
                     <hr class="light">
-                    <p class="text-faded">Technologies rise and fall, my key is a strong base (Engineering in Computer Science), constantly updating and hands on experience to stay sharp</p>
-                    <span class="badge badge-dark">ReactJS, Redux, Saga</span>
+                    <p class="text-faded">Technologies evolve every day, my key is a strong base (Engineering in Computer Science), constantly learning and hands on experience to stay an effective web developer</p>
+                    <div class="techstack"><span class="badge badge-dark">ReactJS, Redux, Saga</span>
                     <span class="badge badge-dark">JavaScript</span>
                     <span class="badge badge-dark">Java/J2EE</span>
-                    <span class="badge badge-dark">SQL</span>
+                    <span class="badge badge-dark">SQL, NoSQL</span>
                     <span class="badge badge-dark">CSS</span>
                     <span class="badge badge-dark">HTML5</span>
                     <span class="badge badge-dark">ElasticSearch (ELK)</span>
-                    <span class="badge badge-dark">Material UI & Storybook</span>
-                    <span class="badge badge-dark">NodeJS, Express</span>
+                    <span class="badge badge-dark">NodeJS, ExpressJS</span>
                     <span class="badge badge-dark">jQuery</span>
                     <span class="badge badge-dark">SequelizeJS (ORM)</span>
                     <span class="badge badge-dark">Bootstrap</span>
+                    <span class="badge badge-dark">Material UI</span>
+                    <span class="badge badge-dark">Storybook</span>
                     <span class="badge badge-dark">React Native</span>
-                    <span class="badge badge-dark">Eslint, Jest, Cypress</span>
+                    <span class="badge badge-dark">Eslint, SonarQube</span>
+                    <span class="badge badge-dark">Jest, Cypress</span>
                     <span class="badge badge-dark">Ionic</span>
+                    <span class="badge badge-dark">Photoshop, Illustrator</span>
+                    <span class="badge badge-dark">git</span>
+                    <span class="badge badge-dark">JIRA, confluence, Trello</span>
+                    <span class="badge badge-dark">UNIX, Linux</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -128,7 +135,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
                         <h3>Professional Experience</h3>
-                        <p class="text-muted">8 Years of building web apps experience including top MNC</p>
+                        <p class="text-muted">8 Years of building web apps experience including top MNC and a Startup</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
