--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                         <a class="page-scroll" href="#services">Highlights</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#timeline">Timeline</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#portfolio">Snapshots</a>
                     </li>
                     <li>
@@ -156,10 +159,91 @@
         </div>
     </section>
 
+    <section id="timeline">
+            <div class="container">
+                    <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <h2 class="section-heading">Experience Timeline</h2>
+                                <hr class="primary">
+                            </div>
+                        </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="main-timeline7">
+                                <div class="timeline">
+                                    <div class="timeline-icon"><img class="cognizant sr-icons" src="./img/Renault-Logo.png" /></div>
+                                    <span class="year">Present</span>
+                                    <div class="timeline-content">
+                                        <h5 class="title">Senior Full Stack Developer</h5>
+                                        <p class="description">
+                                                To enable the team develop web-applications and API using ReactJS, NodeJS used by engineers for planning of manufacturing parts of a car.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="timeline">
+                                    <div class="timeline-icon"><img class="cognizant sr-icons" src="./img/Cognizant_logo.png" /></div>
+                                    <span class="year">2016</span>
+                                    <div class="timeline-content">
+                                        <h5 class="title">Full Stack Developer</h5>
+                                        <p class="description">
+                                                Search tool customization for faster text search for Pearson Education based on ElasticSearch, Cassandra and Logstash.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="timeline">
+                                    <div class="timeline-icon"><img class="accenture sr-icons" src="./img/Accenture-logo.png" /></div>
+                                    <span class="year">2014</span>
+                                    <div class="timeline-content">
+                                        <h5 class="title">Web developer/UI Designer</h5>
+                                        <p class="description">
+                                                Developed Java web services and designed web pages/logos, for tablet applications used by Walmart
+                                                employees.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="timeline">
+                                        <div class="timeline-icon"><img class="doparttime sr-icons" src="./img/doparttime.png" /></div>
+                                        <span class="year">2013</span>
+                                        <div class="timeline-content">
+                                            <h5 class="title">Architect/Entrepreneur</h5>
+                                            <p class="description">
+                                                    Created DoPartTime.com (a PayPal incubated startup), a job portal and android app for part time jobs in India.
+                                            </p>
+                                        </div>
+                                    </div>
+                                <div class="timeline">
+                                    <div class="timeline-icon"><img class="wiprologo sr-icons" src="./img/Wipro_Logo_New.png" /></div>
+                                    <span class="year">2011</span>
+                                    <div class="timeline-content">
+                                        <h5 class="title">Java Developer</h5>
+                                        <p class="description">
+                                                Developing payment management web portal for Citi group Employees, to manage
+                                                transactions and approve them, using customized J2EE framework.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="timeline">
+                                        <div class="timeline-icon"><i class="fa fa-graduation-cap sr-icons"></i></div>
+                                        <span class="year">2007-11</span>
+                                        <div class="timeline-content">
+                                            <h5 class="title">Graduated</h5>
+                                            <p class="description">
+                                                from Karunya University, as Bachelor of Engineering in Computer Science.
+                                            </p>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+    </section>
+
+
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -173,8 +257,8 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
+                </div> -->
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -188,8 +272,8 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
+                </div> -->
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -203,9 +287,9 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
+                    <a href="img/gallery/google_mobile.jpg" class="portfolio-box">
                         <img src="img/gallery/google_mobile.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -220,21 +304,21 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                    <a href="img/gallery/appfest.jpg" class="portfolio-box">
+                        <img src="img/gallery/appfest.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Windows AppFest
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    A 18 hour coding marathon by Microsoft
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -248,7 +332,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -286,6 +370,7 @@
         
 
     </section>
+
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
