--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <title>Ashok's</title>
 
@@ -364,10 +365,7 @@
                 <div class="mapouter"><div class="gmap_canvas"><iframe width="120%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=chennai&t=&z=6&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;}</style></div>
             </div>
             
-        </div>
-
-
-        
+        </div>  
 
     </section>
 
