--- a/index.html
+++ b/index.html
@@ -319,21 +319,21 @@
                         </div>
                     </a>
                 </div>
-                <!-- <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/gallery/ReleasePlanning.jpg" class="portfolio-box">
+                        <img src="img/gallery/ReleasePlanning.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Release Planning @ Renault Digital
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Paris, France
                                 </div>
                             </div>
                         </div>
                     </a>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
