--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     <span class="badge badge-dark">git</span>
                     <span class="badge badge-dark">JIRA, confluence, Trello</span>
                     <span class="badge badge-dark">UNIX, Linux</span>
+                    <span class="badge badge-dark">Docker</span>
                     </div>
                 </div>
             </div>
@@ -380,6 +381,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107264037-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-107264037-2');
+    </script>
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
