--- a/index.html
+++ b/index.html
@@ -87,17 +87,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Language is no barrier for a true developer</h2>
+                    <h2 class="section-heading">Language 's just another party @ a developer's calendar</h2>
                     <hr class="light">
-                    <p class="text-faded">Technologies evolve every day, my key is a strong base (Engineering in Computer Science), constantly learning and hands on experience to stay an effective web developer</p>
+                    <p class="text-faded">New & better technologies swoop in every day, my key is a strong base (Engineering in Computer Science), constant learning and trying small hands on projects to steer effective in the web currents</p>
                     <div class="techstack"><span class="badge badge-dark">ReactJS, Redux, Saga</span>
                     <span class="badge badge-dark">JavaScript</span>
                     <span class="badge badge-dark">Java/J2EE</span>
                     <span class="badge badge-dark">SQL, NoSQL</span>
+                    <span class="badge badge-dark">GraphQL</span>
+                    <span class="badge badge-dark">NodeJS, ExpressJS</span>
                     <span class="badge badge-dark">CSS</span>
                     <span class="badge badge-dark">HTML5</span>
                     <span class="badge badge-dark">ElasticSearch (ELK)</span>
-                    <span class="badge badge-dark">NodeJS, ExpressJS</span>
                     <span class="badge badge-dark">jQuery</span>
                     <span class="badge badge-dark">SequelizeJS (ORM)</span>
                     <span class="badge badge-dark">Bootstrap</span>
