Adding infosys experience
Rewording text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="page-scroll" href="#services">Highlights</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#timeline">Timeline</a>
+                        <a class="page-scroll" href="#timeline">Experience</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Snapshots</a>
@@ -77,8 +77,8 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">{Hello World!}- `this's Ashok`</h1>
                 <hr>
-                <p>A Full stack web developer with a passion to build amazing stuff, loves to code</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Know more</a>
+                <p>From a no-one to a Full stack web developer bridged just by the passion to build amazing stuff & the love of code</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Seriously!?</a>
             </div>
         </div>
     </header>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Language 's just another party @ a developer's calendar</h2>
+                    <h2 class="section-heading">Language 's just another party @ a developer's</h2>
                     <hr class="light">
                     <p class="text-faded">New & better technologies swoop in every day, my key is a strong base (Engineering in Computer Science), constant learning and trying small hands on projects to steer effective in the web currents</p>
                     <div class="techstack"><span class="badge badge-dark">ReactJS, Redux, Saga</span>
@@ -174,8 +174,18 @@
                         <div class="col-md-12">
                             <div class="main-timeline7">
                                 <div class="timeline">
-                                    <div class="timeline-icon"><img class="cognizant sr-icons" src="./img/Renault-Logo.png" /></div>
+                                    <div class="timeline-icon"><img class="infy sr-icons" src="./img/infosys-logo.png" /></div>
                                     <span class="year">Present</span>
+                                    <div class="timeline-content">
+                                        <h5 class="title">Specialist Programmer (Expert Track)</h5>
+                                        <p class="description">
+                                                To learn, R&D, implement and test latest technologies and help build strong technical teams
+                                        </p>
+                                    </div>
+                                </div>                                
+                                <div class="timeline">
+                                    <div class="timeline-icon"><img class="cognizant sr-icons" src="./img/Renault-Logo.png" /></div>
+                                    <span class="year">2019</span>
                                     <div class="timeline-content">
                                         <h5 class="title">Senior Full Stack Developer</h5>
                                         <p class="description">
