--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">{Hello World!}- `this's Ashok`</h1>
                 <hr>
-                <p>From a no-one to a Full stack web developer bridged just by the passion to build amazing stuff & the love of code</p>
+                <p>From a Computer Science Engineer to a Full stack Web Developer, bridged just by the passion to build amazing stuff & the love of code</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Seriously!?</a>
             </div>
         </div>
