updating tech stack & favicon

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h1 id="homeHeading">{Hello World!}- `this's Ashok`</h1>
                 <hr>
                 <p>From a Computer Science Engineer to a Full stack Web Developer, bridged just by the passion to build amazing stuff & the love of code</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Seriously!?</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Know more!</a>
             </div>
         </div>
     </header>
@@ -90,13 +90,14 @@
                     <h2 class="section-heading">Language 's just another party @ a developer's</h2>
                     <hr class="light">
                     <p class="text-faded">New & better technologies swoop in every day, my key is a strong base (Engineering in Computer Science), constant learning and trying small hands on projects to steer effective in the web currents</p>
-                    <div class="techstack"><span class="badge badge-dark">ReactJS, Redux, Saga</span>
-                    <span class="badge badge-dark">JavaScript</span>
-                    <span class="badge badge-dark">Java/J2EE</span>
+                    <div class="techstack">
+                    <span class="badge badge-dark">ReactJS, Redux, Saga & Thunk</span>
+                    <span class="badge badge-dark">JavaScript, ES6, TypeScript</span>
+                    <span class="badge badge-dark">Java</span>
                     <span class="badge badge-dark">SQL, NoSQL</span>
                     <span class="badge badge-dark">GraphQL</span>
                     <span class="badge badge-dark">NodeJS, ExpressJS</span>
-                    <span class="badge badge-dark">CSS</span>
+                    <span class="badge badge-dark">CSS, SCSS, BEM</span>
                     <span class="badge badge-dark">HTML5</span>
                     <span class="badge badge-dark">ElasticSearch (ELK)</span>
                     <span class="badge badge-dark">jQuery</span>
@@ -107,12 +108,13 @@
                     <span class="badge badge-dark">React Native</span>
                     <span class="badge badge-dark">Eslint, SonarQube</span>
                     <span class="badge badge-dark">Jest, Cypress</span>
-                    <span class="badge badge-dark">Ionic</span>
                     <span class="badge badge-dark">Photoshop, Illustrator</span>
                     <span class="badge badge-dark">git</span>
                     <span class="badge badge-dark">JIRA, confluence, Trello</span>
                     <span class="badge badge-dark">UNIX, Linux</span>
                     <span class="badge badge-dark">Docker</span>
+                    <span class="badge badge-dark">AGILE - Scrum</span>
+                    <span class="badge badge-dark">XP, Pair, Mob programming</span>
                     </div>
                 </div>
             </div>
@@ -141,7 +143,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
                         <h3>Professional Experience</h3>
-                        <p class="text-muted">8 Years of building web apps experience including top MNC and a Startup</p>
+                        <p class="text-muted">9 Years of building web apps experience including top MNC and a Startup</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
