--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
+    <!-- Theme CSS -->
+    <link href="./dist/main.css" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -373,7 +376,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="mapouter"><div class="gmap_canvas"><iframe width="120%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=chennai&t=&z=6&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;}</style></div>
+                <div class="mapouter"><div class="gmap_canvas"><iframe width="120%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=chennai&t=&z=5&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;}</style></div>
             </div>
             
         </div>  
